init: add hook-store library

--- a/nx.json
+++ b/nx.json
@@ -71,7 +71,8 @@
       },
       "library": {
         "style": "tailwind",
-        "linter": "eslint"
+        "linter": "eslint",
+        "unitTestRunner": "vitest"
       }
     }
   }
