init: update eslintrc and prettierrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
               }
             ]
           }
-        ]
+        ],
+        "@typescript-eslint/no-use-before-define": "off"
       }
     },
     {
