libs: add complex valtio feature skeleton

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@experiments/complex-valtio-feature": ["libs/web/complex-valtio-feature/src/index.ts"],
       "@experiments/lib-hook-store": ["libs/web/hook-store/src/index.ts"],
       "@experiments/model-hook-state": ["libs/web/model-hook-state/src/index.ts"],
       "@experiments/shared-ui": ["libs/web/shared/ui/src/index.ts"],
